# GISCI343_Assignment_2

./: README.md  auckland-transport-bus-train-and-ferry-boardings-by-day-july-2024-to-june-2025.csv  auckland-transport-bus-train-ferry-boardings-by-day-to-12-april.csv  bus-train-and-ferry-boardings-by-day-report-2023-2024.csv  main.py  pyproject.toml  report.qmd
basic-app/: app.py  plan.md
basic-app/data/: 2019_2024_bus_train_patronage.csv  bus_routes.geojson  patronage_data.csv
basic-app/data/processed/: patronage_daily_long.csv  patronage_daily_wide.csv  selected_services_patronage_long.csv
basic-app/www/: dashboard.css
bus_routes/: Bus_Route.dbf  Bus_Route.shp.xml  Bus_Route.shx
bus_stops/: Bus_Stop.dbf  Bus_Stop.shp  Bus_Stop.shp.xml  Bus_Stop.shx
school_bus_routes/: School_Bus_Route.dbf  School_Bus_Route.shp  School_Bus_Route.shp.xml  School_Bus_Route.shx
