[project]
name = "gisci343-assignment-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.3",
    "ipyleaflet>=0.20.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "shiny>=1.6.0",
    "shinywidgets>=0.8.0",
]
